codepkg/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Departamentss__c</fullName>
        <label>Department</label>
        <referenceTo>Departament__c</referenceTo>
        <relationshipLabel>Employeers (Department)</relationshipLabel>
        <relationshipName>Employeers1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Custom error</errorMessage>
            <filterItems>
                <field>Employee__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employeers</relationshipLabel>
        <relationshipName>Employeers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ofice_Name__c</fullName>
        <label>Ofice Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phones__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Juniour</fullName>
                    <default>true</default>
                    <label>Juniour</label>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Seniour</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Cheff</fullName>
                </value>
                <value>
                    <fullName>System architector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>salaryS__c * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email_manager__c</fullName>
        <label>email manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>emails__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>salaryS__c</fullName>
        <label>salary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>emails__c</columns>
        <columns>Phones__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cloud</label>
    </listViews>
    <listViews>
        <fullName>Java</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>emails__c</columns>
        <columns>Phones__c</columns>
        <filterScope>Everything</filterScope>
        <label>Java</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employeers</pluralLabel>
    <recordTypes>
        <fullName>Developers</fullName>
        <active>true</active>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Managers</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>QAs</fullName>
        <active>true</active>
        <label>QA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>max_salary</fullName>
        <active>true</active>
        <errorConditionFormula>salaryS__c &gt; 1500</errorConditionFormula>
        <errorMessage>ERROR salary &gt; 1500</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>min_salary</fullName>
        <active>true</active>
        <errorConditionFormula>salaryS__c &lt; 300</errorConditionFormula>
        <errorMessage>salary &lt; 300 min</errorMessage>
    </validationRules>
</CustomObject>